# monorepo

./: README.md
go/: README.md  go.mod  makefile
go/cmd/: README.md
go/cmd/hello-grpc/: main.go  main_test.go
go/cmd/httpsrvc/: main.go
go/internal/: README.md
go/pkg/: README.md
go/pkg/hellopb/: hello.pb.go  hello_grpc.pb.go
proto/: README.md  hello.proto
py/: README.md
py/apps/: README.md
py/apps/foosrvc/: main.py  pyproject.toml
py/apps/hello-http/: hello_pb2.py  hello_pb2_grpc.py  main.py  makefile
py/mods/fakomatic/: pyproject.toml
py/mods/fakomatic/fakomatic/: foo.py
py/mods/fakomatic/tests/: test_fakomatic.py
py/pkg/hello/: pyproject.toml
py/pkg/hello/hello/: hello.py
py/pkg/hello/tests/: test_hello.py
