[tool.poetry]
name = "foosrvc"
version = "0.1.0"
description = "An example service"
authors = ["Mike Donnici <michael.donnici@dpie.nsw.gov.au>"]

[tool.poetry.dependencies]
python = "^3.8"
hello = {path = "../../pkg/hello", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
