[tool.poetry]
name = "hello"
version = "0.1.0"
description = "says hello to a fake name"
authors = ["Mike Donnici <michael.donnici@dpie.nsw.gov.au>"]

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^8.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
